# quickapi-rs

./: Cargo.toml  README.md
crates/quickapi-error/: Cargo.toml
crates/quickapi-error/src/: lib.rs
crates/quickapi-filter/: Cargo.toml
crates/quickapi-filter/src/: error.rs  lib.rs  select.rs
crates/quickapi-filter/src/common/: mod.rs
crates/quickapi-filter/src/common/paginator/: limit.rs  mod.rs  page.rs  paginator.rs  params.rs
crates/quickapi-http/: Cargo.toml
crates/quickapi-http/src/: error.rs  lib.rs  serializer.rs
crates/quickapi-http/src/request/: mod.rs
crates/quickapi-http/src/response/: key.rs  mod.rs  partials.rs  response.rs
crates/quickapi-lookup/: Cargo.toml
crates/quickapi-lookup/src/: error.rs  lib.rs  lookup.rs
crates/quickapi-lookup/src/map/: map.rs  mod.rs  value.rs
crates/quickapi-macro/: Cargo.toml
crates/quickapi-macro/src/: lib.rs
crates/quickapi-model/: Cargo.toml
crates/quickapi-model/src/: callback.rs  columns.rs  error.rs  expr.rs  lib.rs  update.rs
crates/quickapi-view/: Cargo.toml
crates/quickapi-view/src/: error.rs  lib.rs  method.rs  router.rs  view.rs  viewfunc.rs
crates/quickapi-when/: Cargo.toml
crates/quickapi-when/src/: error.rs  lib.rs  when.rs
example/: Cargo.toml  docker-compose.yml
example/entity/: Cargo.toml
example/entity/src/: lib.rs  order.rs  user.rs
example/src/: main.rs  serializers.rs
src/: error.rs  lib.rs  macros.rs  prelude.rs  quickapi.rs  response.rs  router.rs  serializer.rs  state.rs
src/filter/: common.rs  error.rs  mod.rs  model.rs  queryset.rs  select.rs
src/filter/common/: mod.rs  paginator.rs
src/filter/common/paginator/: limit.rs  mod.rs  page.rs  paginator.rs  params.rs
src/filter/query/: mod.rs
src/filter/queryset/: mod.rs  select.rs
src/filter/select/: mod.rs  model.rs
src/quickapi/: mod.rs  view.rs
src/response/: json.rs  mod.rs  parts.rs
src/response/json/: key.rs  mod.rs  response.rs
src/view/: error.rs  extract.rs  filter.rs  handler.rs  http.rs  lookup.rs  mod.rs  prefix.rs  routing.rs  traits.rs  view.rs  when.rs
src/view/create/: mod.rs  view.rs
src/view/delete/: mod.rs  mode.rs  view.rs
src/view/detail/: lookup.rs  mod.rs  view.rs
src/view/filter/: mod.rs
src/view/list/: mod.rs  view.rs
src/view/program/: mod.rs  view.rs
src/view/when/: clause.rs  mod.rs  views.rs  when.rs
src/viewset/: mod.rs
src/when/: error.rs  mod.rs  views.rs  when.rs
