[package]
name = "quickapi"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4" }
sea-orm = { version = "1.2.0-rc.1", features = ["sqlx-postgres", "runtime-tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "2.0"
tracing = { version = "0.1" }