[package]
name = "quickapi"
version = "0.1.0"
edition = "2024"

[dependencies]
quickapi-filter = { path = "crates/quickapi-filter" }
quickapi-macro = { path = "crates/quickapi-macro" }
quickapi-when = { path = "crates/quickapi-when" }

async-trait = "0.1.88"
axum = { version = "0.8.4" }
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "runtime-tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "2.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing = { version = "0.1" }
