[package]
name = "quickapi"
version = "0.1.0"
edition = "2024"

[dependencies]
quickapi-filter = { path = "crates/quickapi-filter" }
quickapi-http = { path = "crates/quickapi-http" }
quickapi-lookup = { path = "crates/quickapi-lookup" }
quickapi-macro = { path = "crates/quickapi-macro" }
quickapi-model = { path = "crates/quickapi-model" }
quickapi-view = { path = "crates/quickapi-view" }
quickapi-when = { path = "crates/quickapi-when" }

async-trait = "0.1.88"
axum = { version = "0.8.4" }
bytes = { version = "1.10.1" }
dyn-clone = "1.0.19"
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "runtime-tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "2.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing = { version = "0.1" }
