[package]
name = "quickapi-filter"
version = "0.1.0"
edition = "2024"

[dependencies]
quickapi-macro = { path = "../quickapi-macro" }
thiserror = "2.0.12"
axum = "0.8.4"
sea-orm = { version = "1.1.12", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.45.1"
url = "2.5.4"
serde_urlencoded = "0.7.1"
