[package]
name = "quickapi-lookup"
version = "0.1.0"
edition = "2024"

[dependencies]
quickapi-model = { path = "../quickapi-model" }
quickapi-view = { path = "../quickapi-view" }

async-trait = "0.1.88"
axum-test = "17.3.0"
axum = "0.8.4"
sea-orm = "1.1.12"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }