[package]
name = "quickapi-model"
version = "0.1.0"
edition = "2024"

[dependencies]
quickapi-macro = { path = "../quickapi-macro" }
async-trait = { version = "0.1.88" }
axum = { version = "0.8.4" }
sea-orm = { version = "1.1.12" }
thiserror = { version = "2.0.12" }
tokio = { version = "1.45.1", features = ["full"] }
dyn-clone = "1.0.19"
