[package]
name = "quickapi-view"
version = "0.1.0"
edition = "2024"

[dependencies]
quickapi-filter = { path = "../quickapi-filter" }
quickapi-macro = { path = "../quickapi-macro" }
quickapi-http = { path = "../quickapi-http" }

axum = { version = "0.8.4" }
async-trait = { version = "0.1.88" }
bytes = { version = "1.10.1" }
dyn-clone = "1.0.19"
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "runtime-tokio"] }
thiserror = { version = "2.0.12" }
serde_json = "1.0.140"